# Pinacoteca

./: .gitignore  Makefile  Pinacoteca.ino  diagram.json  libraries.txt  wokwi.toml
docs/: app_inventor_senza_hardware.md
docs/en/: main.synctex(busy)  main.tex
docs/en/sections/: 01_introduction.tex  02_architecture.tex  03_design_decisions.tex  03_diagrams.tex  03_hardware.tex  04_firmware.tex  05_modules.tex  06_display.tex  07_step_by_step.tex  07_tests.tex  08_requirements.tex  08_usage.tex  09_api.tex  09_risks.tex  10_software.tex  10_timing.tex  11_limits.tex  12_traceability.tex  13_validation.tex  14_calibration.tex  15_tradeoffs.tex  16_glossary.tex  17_remote_control.tex
docs/ita/: main.tex
docs/ita/sections/: 01_introduzione.tex  02_architettura.tex  03_decisioni.tex  03_diagrammi.tex  03_hardware.tex  04_firmware.tex  05_moduli.tex  06_display.tex  07_implementazione.tex  (+14 more)
lib/bluetooth/: README.md  ble_link.h  bluetooth_connection.h  bluetooth_link.h  command_processor.h  remote_gateway.h
lib/display/: display.h  lcd.h
lib/humidity/: humidifier.h  humidity.h
lib/led/: led.h  stoplight.h
lib/lighting/: lighting_control.h  photoresistor.h
lib/servomotor/: servomotor.h  turnstile.h
lib/system/: error_registry.h
lib/temperature/: temperature.h  thermostat.h
lib/wifi/: README.md  command_processor.h  remote_gateway.h  wifi_connection.h  wifi_link.h
test/: CMakeLists.txt  README.md  all_tests.cpp  mock_server_tests.py  run_tests.sh
test/mocks/: Arduino.h  DHT.h  LiquidCrystal.h  Servo.h
tools/: ble_pc_tester.py  mock_arduino_server.py
